tests/baselines/reference/invalid-non-id-start-groupspecifier-5.errors.txt
invalid-non-id-start-groupspecifier-5.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-non-id-start-groupspecifier-5.ts(14,6): error TS1005: '>' expected.


==== invalid-non-id-start-groupspecifier-5.ts (2 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupSpecifier must be identifier-like.
    esid: prod-GroupSpecifier
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a\uDCA4>.)/;
       ~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
         
!!! error TS1005: '>' expected.
    